--- a/app/Makefile
+++ b/app/Makefile
@@ -59,6 +59,7 @@ CSTD		?= -std=c99
 
 OBJS		+= $(SRC_DIR)/$(BINARY).o
 OBJS		+= $(SRC_DIR)/core/system.o
+OBJS		+= $(SRC_DIR)/core/timer.o
 # OBJS		+= $(SRC_DIR)/bootloader.o
 # OBJS		+= $(SRC_DIR)/timer.o
 # OBJS		+= $(SRC_DIR)/info.o
