--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -11,7 +11,7 @@ OPENCM3_DIR    = ../libopencm3
 SHARED_SRC_DIR = ../shared/src
 SHARED_INC_DIR = ../shared/inc
 
-BINARY = firmware
+BINARY = bootloader
 
 ###############################################################################
 # Basic Device Setup
@@ -58,9 +58,7 @@ CSTD		?= -std=c99
 # Source files
 
 OBJS		+= $(SRC_DIR)/$(BINARY).o
-OBJS		+= $(SRC_DIR)/core/system.o
-OBJS		+= $(SRC_DIR)/core/timer.o
- OBJS		+= $(SRC_DIR)/bootloader.o
+# OBJS		+= $(SRC_DIR)/bootloader.o
 # OBJS		+= $(SRC_DIR)/timer.o
 # OBJS		+= $(SRC_DIR)/info.o
 # OBJS		+= $(SHARED_SRC_DIR)/core/system.o
@@ -147,6 +145,7 @@ print-%:
 %.bin: %.elf
 	@#printf "  OBJCOPY $(*).bin\n"
 	$(Q)$(OBJCOPY) -Obinary $(*).elf $(*).bin
+	$(Q)./pad-bootloader.py
 
 %.hex: %.elf
 	@#printf "  OBJCOPY $(*).hex\n"
