feat: implement uart

--- a/app/Makefile
+++ b/app/Makefile
@@ -61,8 +61,8 @@ OBJS		+= $(SRC_DIR)/$(BINARY).o
 OBJS		+= $(SHARED_SRC_DIR)/core/system.o
 OBJS		+= $(SRC_DIR)/timer.o
 OBJS		+= $(SRC_DIR)/bootloader.o
+OBJS		+= $(SHARED_SRC_DIR)/core/uart.o
 # OBJS		+= $(SRC_DIR)/info.o
-# OBJS		+= $(SHARED_SRC_DIR)/core/uart.o
 # OBJS		+= $(SHARED_SRC_DIR)/core/ring-buffer.o
 
 ###############################################################################
