--- a/app/Makefile
+++ b/app/Makefile
@@ -62,8 +62,8 @@ OBJS		+= $(SHARED_SRC_DIR)/core/system.o
 OBJS		+= $(SRC_DIR)/timer.o
 OBJS		+= $(SRC_DIR)/bootloader.o
 OBJS		+= $(SHARED_SRC_DIR)/core/uart.o
+OBJS		+= $(SHARED_SRC_DIR)/core/ring-buffer.o
 # OBJS		+= $(SRC_DIR)/info.o
-# OBJS		+= $(SHARED_SRC_DIR)/core/ring-buffer.o
 
 ###############################################################################
 # C flags
