--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -64,6 +64,7 @@ OBJS		+= $(SHARED_SRC_DIR)/core/crc8.o
 OBJS		+= $(SHARED_SRC_DIR)/core/uart.o
 OBJS		+= $(SHARED_SRC_DIR)/core/ring-buffer.o
 OBJS		+= $(SHARED_SRC_DIR)/core/system.o
+OBJS		+= $(SHARED_SRC_DIR)/core/simple-timer.o
 
 ###############################################################################
 # C flags
