--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -60,11 +60,12 @@ CSTD		?= -std=c99
 OBJS		+= $(SRC_DIR)/$(BINARY).o
 OBJS		+= $(SRC_DIR)/comms.o
 OBJS		+= $(SRC_DIR)/bl-flash.o
-OBJS		+= $(SHARED_SRC_DIR)/core/crc8.o
+OBJS		+= $(SHARED_SRC_DIR)/core/crc.o
 OBJS		+= $(SHARED_SRC_DIR)/core/uart.o
 OBJS		+= $(SHARED_SRC_DIR)/core/ring-buffer.o
 OBJS		+= $(SHARED_SRC_DIR)/core/system.o
 OBJS		+= $(SHARED_SRC_DIR)/core/simple-timer.o
+OBJS		+= $(SHARED_SRC_DIR)/core/firmware-info.o
 
 ###############################################################################
 # C flags
